# alice2

./: .gitignore  .gitmodules  CMakeLists.txt
proto/Source1/: ai_activity.proto  base_gcmessages.proto  base_gcmessages_s1.proto  demo_s1.proto  dota_broadcastmessages.proto  dota_clientmessages.proto  dota_clientmessages_s1.proto  dota_commonmessages_s1.proto  dota_gcmessages_client.proto  dota_gcmessages_client_fantasy.proto  dota_gcmessages_client_fantasy_s1.proto  dota_gcmessages_client_s1.proto  dota_gcmessages_common.proto  dota_gcmessages_common_s1.proto  dota_gcmessages_server.proto  dota_gcmessages_server_s1.proto  dota_modifiers.proto  dota_modifiers_s1.proto  dota_usermessages.proto  dota_usermessages_s1.proto  econ_gcmessages.proto  econ_gcmessages_s1.proto  gcsdk_gcmessages.proto  gcsdk_gcmessages_s1.proto  gcsystemmsgs.proto  netmessages.proto  netmessages_s1.proto  network_connection_s1.proto  networkbasetypes.proto  networkbasetypes_s1.proto  steammessages.proto  steammessages_cloud.steamworkssdk.proto  steammessages_oauth.steamworkssdk_s1.proto  steammessages_publishedfile.steamworkssdk_s1.proto  steammessages_unified_base.steamworkssdk.proto  usermessages.proto  usermessages_s1.proto
proto/Source2/: base_gcmessages.proto  demo.proto  dota_broadcastmessages.proto  dota_clientmessages.proto  dota_commonmessages.proto  dota_gcmessages_client.proto  dota_gcmessages_client_fantasy.proto  dota_gcmessages_common.proto  dota_modifiers.proto  dota_usermessages.proto  econ_gcmessages.proto  gameevents.proto  gcsdk_gcmessages.proto  gcsystemmsgs.proto  netmessages.proto  network_connection.proto  networkbasetypes.proto  rendermessages.proto  steammessages.proto  steammessages_cloud.steamworkssdk.proto  steammessages_oauth.steamworkssdk.proto  steammessages_publishedfile.steamworkssdk.proto  steammessages_unified_base.steamworkssdk.proto  te.proto  usermessages.proto
src/alice2/: config.hpp  dem.cpp  dem.hpp  dem_file.cpp  dem_file.hpp  packets.cpp  packets.hpp  packets.s1.hpp.inline  packets.s2.hpp.inline  parser.cpp  parser.hpp
src/alice2/util/: bitstream.cpp  bitstream.hpp  constexpr_hash.hpp  delegate.hpp  dict.hpp  exception.hpp  expect.hpp  noncopyable.hpp  varint.hpp  ztime.hpp
test/alice2/: dem.cpp  packets.cpp
test/alice2/util/: constexpr_hash.cpp  constexpr_hash.hpp  delegate.cpp  dict.cpp  exception.cpp  expect.cpp  noncopyable.cpp  noncopyable.hpp  varint.cpp  ztime.cpp  ztime.hpp
